# neuraloperator

./: pyproject.toml
config/: __init__.py
scripts/: hybrid_lbm_fno.py
