[project]
name = "neuraloperator"
description = "NeuralOperator: Learning in Infinite Dimensions"
authors = [
    {name = "Jean Kossaifi <jean.kossaifi@gmail.com>, David Pitt <david.h.pitt@gmail.com>, Nik Kovachki, Zongyi Li", email="david.h.pitt@gmail.com"},
]
dependencies = [
    "wandb",
    "ruamel-yaml",
    "zencfg",
    "configmypy",
    "tensorly",
    "tensorly-torch",
    "matplotlib",
    "numpy>=1.25",
    "opt-einsum",
    "h5py",
    "zencfg>=0.3.0",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT"}

# Dynamic versioning
dynamic = ["version"]

# # Required config for build system
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest",
    "flaky",
    "black"

]
doc = [
    "matplotlib",
    "myst-nb",
    "numpydoc",
    "numpy>=1.25",
    "sphinx",
    "sphinx-gallery",
    "sphinx-design",
    "tensorly_sphinx_theme",
    "torchtnt",
    "torch_harmonics==0.7.4"
]
all = [
    "pytest",
    "flaky",
    "black",
    "matplotlib",
    "myst-nb",
    "numpydoc",
    "sphinx",
    "sphinx-gallery",
    "sphinx-design",
    "tensorly_sphinx_theme",
    "torchtnt",
    "numpy>=1.25",
    "scipy",
    "torch_harmonics==0.7.4"
]
# [build-system]
# # Build system specify which backend is used to build/install the project (flit,
# # poetry, setuptools,...). All backends are supported by `pip install`
# requires = ["flit_core >=3.8,<4"]
# build-backend = "flit_core.buildapi
