[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "neuraloperator"
description = "Machine learning for Computational Fluid Dynamics."
readme = "README.md"
requires-python = ">=3.9" 
license = {file = "LICENSE"}
# authors = [
#   {name = "camlab-ethz", email="yramic@ethz.ch"},
]
# classifiers = [  # List of https://pypi.org/classifiers/
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3 :: Only",
#     "License :: OSI Approved :: Apache Software License",
#     "Intended Audience :: Science/Research",
# ]
keywords = [
  "dynamical systems", "machine learning", "PyTorch"
]
dependencies = [
    "wandb",
    "ruamel.yaml",
    "configmypy",
    "zencfg",
    "tensorly",
    "tensorly-torch",
    "torch-harmonics"
    "matplotlib",
    "opt-einsum",
    "h5py",
    "zarr"
]

# `version` is automatically set by flit to use `swirl_dynamics.__version__`
dynamic = ["version"]


[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"
