[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "neuraloperator"
description = "Machine learning for Computational Fluid Dynamics."
readme = "README.md"
requires-python = ">=3.9" 
license = {file = "LICENSE"}
# authors = [
#   {name = "camlab-ethz", email="yramic@ethz.ch"},
# classifiers = [  # List of https://pypi.org/classifiers/
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3 :: Only",
#     "License :: OSI Approved :: Apache Software License",
#     "Intended Audience :: Science/Research",
# ]
keywords = [
  "dynamical systems", "machine learning", "PyTorch"
]
dependencies = [
    "wandb",
    "ruamel.yaml",
    "configmypy",
    "zencfg",
    "tensorly",
    "tensorly-torch",
    "torch-harmonics",
    "matplotlib",
    "opt-einsum",
    "h5py",
    "zarr",
]

version = "0.1.0"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

